--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-import": "2.17.2",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
+    "mongoose": "^5.5.12",
     "nodemon": "^1.19.1"
   },
   "scripts": {
