--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lib": "lib",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "passport": "^0.4.0"
+  },
   "devDependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
